tests/compile-tests/bad_cmp_expr.stderr
error: unexpected end of input, expected expression
 --> $DIR/bad_cmp_expr.rs:6:3
  |
6 |   c!(x + y == );
  |   ^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `c` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected expression
 --> $DIR/bad_cmp_expr.rs:7:6
  |
7 |   c!(==);
  |      ^^

error: expected binary operation
 --> $DIR/bad_cmp_expr.rs:8:6
  |
8 |   c!(x);
  |      ^

error: expected expression
 --> $DIR/bad_cmp_expr.rs:9:6
  |
9 |   c!(>=3);
  |      ^^
